# memery

./: .gitignore  pyproject.toml
.github/workflows/: python-app.yml
memery/: cli.py  core.py  crafter.py  encoder.py  indexer.py  loader.py  streamlit_app.py
tests/: conftest.py  test_cli.py  test_core.py  test_crafter.py  test_loader.py
